[FIX] website, website_livechat: hide cookies bar on policy page
With the popup-styled cookies bar, the cookies policy page is
unreadable. It is also the case with all cookies bar with a backdrop, or
if they are too tall.
The "discrete" and "classic" bars can also potentially hide the last
paragraph(s) of the page.
To avoid that, this commit adds a button to toggle the bar on that page.

Note that the cookies policy page could be on any URL, but it has to be
referenced in the `a.o_cookies_bar_text_policy` link within the cookies
bar.

task-3733860

closes odoo/odoo#166713

X-original-commit: 9d45c227e59e0f4cb4a9425c7a7985be4b3a7650

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1577,6 +1577,13 @@ $ribbon-padding: 100px;
     flex: 1;
 }
 
+.o_cookies_bar_toggle {
+    gap: 0.5rem;
+    inset-inline-end: 1rem;
+    inset-block-end: var(--cookies-bar-toggle-inset-block-end, 1rem);
+    z-index: $zindex-modal + 1; // Over the modal backdrop.
+}
+
 .o_website_btn_loading {
     opacity: $btn-disabled-opacity;
 
